syntax = "proto3";
package app;
option go_package = "github.com/Akagi201/micro-go/internal/proto/app";

// The greeting service definition.
service MicroApp {
  // Sends a greeting
  rpc SayHello (HelloReq) returns (HelloResp) {}
}

// The request message containing the user's name.
message HelloReq {
  string name = 1;
}

// The response message containing the greetings
message HelloResp {
  string message = 1;
}
